[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/HealthMeter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menus/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/TimeMeter.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/UI.gd" type="Script" id=4]
[ext_resource path="res://Menus/WinMenu.tscn" type="PackedScene" id=5]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 44.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthMeter" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 40.0
margin_bottom = 0.0

[node name="TimeMeter" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 4.0

[node name="DeathWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="MusicWaitTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WinMenu" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="timeout" from="DeathWaitTimer" to="." method="_on_DeathWaitTimer_timeout"]
[connection signal="timeout" from="MusicWaitTimer" to="." method="_on_MusicWaitTimer_timeout"]

[editable path="VBoxContainer/TimeMeter"]
